--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <title>
     Business Site
   </title>
-  <link rel="stylesheet" type="text/css" href="public/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 <nav>
