--- a/views/contact.erb
+++ b/views/contact.erb
@@ -11,8 +11,8 @@
 	<input type ="text" name="name">
 	<br>
 
-	<label for = "comment">Tell Us Your Thoughts!</label>
-	<input type ="comment" name="comment" cols="25" rows="3">
+    <label for="comments">Comments:</label>
+    <textarea name="comments" id="comments" cols="25" rows="3"></textarea>
 	
 <!-- 	<textarea name="comments" id="comments" </textarea>
 
