--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 /*about page*/
-.owner_img {
-  width: 30%;
+.logo {
+  width: 60%;
+  margin-left: 20%;
 }
 
 .wrapper {
@@ -17,5 +18,7 @@
   float: left;
   margin: 5px;
   padding: 5px;
-  width: 25%;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
