--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,25 +1,3 @@
-/*about page*/
-.owner_img {
-  width: 30%;
-}
-
-.wrapper {
-  width: 900px;
-  margin: 0 auto;
-}
-
-.column {
-  display: inline-block;
-  width: 45%;
-}
-
-.img {
-  float: left;
-  margin: 5px;
-  padding: 5px;
-  width: 25%;
-}
-
 body{
   max-width: 90%
 }
@@ -50,7 +28,7 @@ body{
 footer {
   background-color: #eaeaea;
   width: 100%;
-  height: 12%
+  height: 12%;
 }
 
 
@@ -99,28 +77,4 @@ width: 20%;
 
 
 
-/*about page*/
-
-
-/*about page*/
-.logo {
-  width: 60%;
-  margin-left: 20%;
-}
-
-
-
-.column {
-  display: inline-block;
-  width: 45%;
-}
-
-.img {
-  float: left;
-  margin: 5px;
-  padding: 5px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-}
 
