--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,10 @@
     Business Site
   </title>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/about.css">
+  <link rel="stylesheet" type="text/css" href="/css/products.css">
+  <link rel="stylesheet" type="text/css" href="/css/contact.css">
+  <link rel="stylesheet" type="text/css" href="/css/home.css">
 </head>
 <body>
 <nav class="nav-bar">
@@ -22,7 +26,7 @@
     </li>
   </ul>
 </nav>
-
+<%= yield %>
 <footer>
   <div class="hours">
     <p>
@@ -57,6 +61,6 @@
 
 </footer>
 
-<%= yield %>
+
 </body>
 </html>
