Updates to Footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,8 +30,8 @@
 <footer>
   <div class="hours">
     <p>
-      HOURS Monday - Friday: 6am - 9pm<br>
-      Saturday &amp; Sunday 8am - 11pm
+      HOURS:<br>
+      24 Hours a Day!
     </p>
   </div>
 
@@ -55,8 +55,10 @@
     </ul>
   </div>
 
-  <div class="button">
-    <button type="button">Contact Info</button>
+  <div class="contact">
+    <p>
+      Contact Us
+    </p>
   </div>
 
 </footer>
