--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,8 +28,15 @@ body{
 footer {
   background-color: #eaeaea;
   width: 100%;
-  height: 12%;
+  height: 65px;
 }
+
+
+
+/*contact button */
+
+
+
 
 
 
@@ -54,26 +61,27 @@ width: 20%;
   display: inline-block;
   float: left;
     text-align: center;
+    vertical-align: middle;
+    padding-top: 10px;
 }
 
 .social-media{
 /*  border: 1px black solid;*/
   width: 22%;
   display: inline-block;
-    text-align: center;
-    height: 100%;
+  text-align: center;
+  height: 100%;
 }
 
-.button{
-
-  margin: auto 0;
-
-/*  border: 1px black solid;*/
-    width: 20%;
+.contact{
+width: 20%;
   display: inline-block;
+  
     text-align: center;
-
+    vertical-align: middle;
+    margin-top: -10px;
 }
+
 
 
 
