--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,18 +29,11 @@ footer {
   background-color: #eaeaea;
   width: 100%;
   height: 65px;
+  vertical-align: middle;
+  margin-left: 5%;
+  border-radius: 5px;
 }
 
-
-
-/*contact button */
-
-
-
-
-
-
-/*contact button */
 
 
 /*hours*/
@@ -49,7 +42,7 @@ footer {
   margin: auto 0;
   float: left;
 /*  border: 1px black solid;*/
-  width: 35%;
+  width: 25%;
   display: inline-block;
   text-align: center;
 }
@@ -57,7 +50,7 @@ footer {
 /*copyright*/
 .copy-right p{
 /*  border: 1px black solid;*/
-width: 20%;
+width: 25%;
   display: inline-block;
   float: left;
     text-align: center;
@@ -67,7 +60,7 @@ width: 20%;
 
 .social-media{
 /*  border: 1px black solid;*/
-  width: 22%;
+  width: 27%;
   display: inline-block;
   text-align: center;
   height: 100%;
