--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,16 +13,16 @@
 <nav class="nav-bar">
   <ul>
     <li>
-      Home
+      <a href="/">Home</a>
     </li>
     <li>
-      Products
+      <a href="/products">Products</a>
     </li>
     <li>
-      About
+      <a href="/about">About</a>
     </li>
     <li>
-      Contact
+      <a href="/contact">Contact</a>
     </li>
   </ul>
 </nav>
