--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,8 +2,10 @@
   font-family: sans-serif;
   font-weight: lighter;
 }
+
 body{
-  max-width: 90%
+  max-width: 90%;
+
 }
 /*nav*/
 .nav-bar{
@@ -54,7 +56,7 @@ footer {
 /*copyright*/
 .copy-right p{
 /*  border: 1px black solid;*/
-width: 25%;
+width: 21%;
   display: inline-block;
   float: left;
     text-align: center;
@@ -64,20 +66,22 @@ width: 25%;
 
 .social-media{
 /*  border: 1px black solid;*/
-  width: 27%;
+  width: 30%;
   display: inline-block;
   text-align: center;
   height: 100%;
+  margin-top: -5px;
 }
 
 .contact{
-width: 20%;
+width: 10%;
   display: inline-block;
-
     text-align: center;
     vertical-align: middle;
-    margin-top: -10px;
-}
+    margin-top: -45px;
+
+/*border: 1px black solid;
+*/}
 
 a{
   text-decoration: none;
