--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>
-    Business Site
+    The Home Page of The Bodacious Bodega
   </title>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/about.css">
