--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,6 +37,9 @@ footer {
   height: 65px;
   vertical-align: middle;
   border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 
