--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,5 +1,5 @@
 
-
+<img id="chef" src="/chef.png">
 
 
 <form method = "POST" action ="/send_mail">
@@ -13,7 +13,7 @@
 
     <label for="comments">Comments:</label>
     <textarea name="comments" id="comments" cols="25" rows="3"></textarea>
-	
+
 <!-- 	<textarea name="comments" id="comments" </textarea>
 
 
@@ -28,6 +28,7 @@
 
 	<input type="submit">
 </form>
+
 
 
 
