--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,18 +1,20 @@
+<div class="wrapper">
+<h2>Want to Reach Out?</h2>
 
+<p>We would love to hear from you! If there's something you'd like to see in our store, hit Submit! Questions or comments? Send those along too!</p>
 
-
-
+      <br>
 <form method = "POST" action ="/send_mail">
-	<label for = "email">Enter Email</label>
+	<label for = "email">Your Email: </label>
 	<input type ="text" name="email">
 	<br>
 
-	<label for = "name">Enter Name</label>
+	<label for = "name">Your  Name:</label>
 	<input type ="text" name="name">
 	<br>
 
     <label for="comments">Comments:</label>
-    <textarea name="comments" id="comments" cols="25" rows="3"></textarea>
+    <textarea name="comments" id="comments" cols="45" rows="5"></textarea>
 	
 <!-- 	<textarea name="comments" id="comments" </textarea>
 
@@ -24,10 +26,10 @@
 		<option value="female">Female</option>
 		<option value="decline">Decline to answer</option>
 	</select> -->
-
-
+	<br>
 	<input type="submit">
 </form>
 
 
 
+</div>
