--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@ footer {
   height: 65px;
   vertical-align: middle;
   border-radius: 5px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
 }
