--- a/public/css/about.css
+++ b/public/css/about.css
@@ -4,7 +4,7 @@
 }
 
 .wrapper {
-  width: 900px;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -17,5 +17,7 @@
   float: left;
   margin: 5px;
   padding: 5px;
-  width: 25%;
+  width: 150px;
+  height:150px;
+  border-radius: 50%;
 }
