--- a/views/products.erb
+++ b/views/products.erb
@@ -1,12 +1,7 @@
-<% ary = ["Groceries", "Household Items", "Prepared Foods", "Health & Pets"] %>
-
 <br>
 
-  <ul>
-  <% ary.each do |item| %>
-    <li><%= item %></li>
-  <% end %>
-  </ul>
-
-
-
+<ul>
+<% @categories.each do |item| %>
+  <li><a href=""><%= item %></a></li>
+<% end %>
+</ul>
