--- a/views/home.erb
+++ b/views/home.erb
@@ -5,6 +5,19 @@
   </title>
 </head>
 <body>
+  <h2 id="name">
+    The Bodega
+  </h2>
+  <div class="column1">
+    <img src="">
+  </div>
+  <div class="column2">
+    <img src="">
+  </div>
+  <div class="column3">
+    <img src="">
+  </div>
+
 
 </body>
 </html>
