--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" href="/css/products.css">
   <link rel="stylesheet" type="text/css" href="/css/contact.css">
   <link rel="stylesheet" type="text/css" href="/css/home.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/js/app.js"></script>
 </head>
 <body>
 <nav class="nav-bar">
