--- a/views/products.erb
+++ b/views/products.erb
@@ -7,10 +7,15 @@
     <a href="#" class="category_name"><%= category.name %></a>
 
     <% category.products.each do |product| %>
+
       <div class="product">
-        <li class="product_name"><%= product.name %></li>
-        <li><%= product.description %></li>
-        <li><img src="<%= product.image_url %>" class="image"></li>
+      
+        <div class="column_right">
+          <div class="product_name"><%= product.name %></div>
+          <div><%= product.description %></div>
+        </div>
+
+        <div class="column_left"><img src="<%= product.image_url %>" class="image"></div>
       </div>
     <% end %>
 
