--- a/views/about.erb
+++ b/views/about.erb
@@ -1,42 +1,44 @@
 <div class="wrapper">
 
-  <h2>An Extraordinary Specialty Food Market</h2>
-  
- 
+  <div class="container">
+    <h2>An Extraordinary Specialty Food Market</h2>
+    
+   
 
-  <img src="Bodega.jpg" alt="logo" class="logo">
-  <p class="about_text">Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
 
-  <div class="staff">
+    <p class="about_text">Our goal is to work with the needs of our community and we are dedicated to bringing you convenience. Our Bodega carries a variety of groceries, prepared food from the deli and specialty products. We stock our Bodega daily with an ultimate selection of fresh produce, cold cuts and cheese, groceries, as well as hundreds of other fantastic specialty food items.
+    </p>
 
-    <h2>About Us:</h2>
+    <div class="staff">
 
-    <div class="column">
+      <h2>About Us:</h2>
 
-      <img src="brian.jpg" alt="owner" class="img">
-      <h3>The Owner</h3>
-      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
+      <div class="column">
 
-      <br>
+        <img src="brian.jpg" alt="owner" class="img">
+        <h3>The Owner</h3>
+        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.</p>
 
-      <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
-      <h3>At the Deli Counter</h3>
-      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
+        <br>
+
+        <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
+        <h3>At the Deli Counter</h3>
+        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
+      </div>
+
+      <div class="column">
+
+        <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
+        <h3>The Cashier</h3>
+        <p>Ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.</p>
+
+        <br>
+
+        <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
+        <h3>The Bodega Cat</h3>
+        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water.</p>
+      </div>
     </div>
-
-    <div class="column">
-
-      <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
-      <h3>The Cashier</h3>
-      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
-
-      <br>
-
-      <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
-      <h3>The Bodega Cat</h3>
-      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
-    </div>
-
   </div>
 
 </div>
