--- a/public/css/products.css
+++ b/public/css/products.css
@@ -7,7 +7,6 @@ li {
 }
 
 
-
 a {
   text-decoration: none;
 }
@@ -24,6 +23,7 @@ a {
   display: none;
   width: 75%;
   margin: 0 auto;
+  margin-left: 20%;
 }
 
 .product_name {
