--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,22 +9,23 @@
   <link rel="stylesheet" type="text/css" href="/css/contact.css">
   <link rel="stylesheet" type="text/css" href="/css/home.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
   <script src="/js/app.js"></script>
 </head>
 <body>
 <nav class="nav-bar">
   <ul>
     <li>
-      <a href="/">Home</a>
+      <a class="nav-buttons" href="/">Home</a>
     </li>
     <li>
-      <a href="/products">Products</a>
+      <a class="nav-buttons" href="/products">Products</a>
     </li>
     <li>
-      <a href="/about">About</a>
+      <a class="nav-buttons" href="/about">About</a>
     </li>
     <li>
-      <a href="/contact">Contact</a>
+      <a class="nav-buttons" href="/contact">Contact</a>
     </li>
   </ul>
 </nav>
@@ -59,7 +60,7 @@
 
   <div class="contact">
     <p>
-      Contact Us
+      <a href="/contact">Contact Us</a>
     </p>
   </div>
 
