added CSS to contact page

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -12,12 +12,14 @@
 	<label for = "email">Your Email: </label>
 	<input type ="text" name="email">
 	<br>
-
+	<br>
 	<label for = "name">Your  Name:</label>
 	<input type ="text" name="name">
 	<br>
+	<br>
 
     <label for="comments">Comments:</label>
+    <br>
 
     <textarea name="comments" id="comments" cols="45" rows="5"></textarea>
 
@@ -32,7 +34,8 @@
 		<option value="decline">Decline to answer</option>
 	</select> -->
 	<br>
-	<input type="submit">
+	<br>
+	<input id="submit" type="submit">
 </form>
 
 </div>
