--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -5,5 +5,43 @@
   padding-right: 20%;
 }
 
+form{
+  padding-top: 10px;
+}
+input{
+  height: 30px;
+  padding: 6px, 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+textarea{
+  height: 100px;
+  padding: 6px, 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+#submit:hover{
+  background-color: #428bca;
+  color: white;
+}
+#submit{
+  width: 10%;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000;
+}
+
 
 
