--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,4 +14,9 @@ body{
 #name{
   text-align: center;
   font-weight: 500;
+  color: white;
+  font-family: 'Rock Salt';
+  font-size: 44px;
+  text-decoration: bold;
+  color: #000;
 }
