--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,8 +3,8 @@
   font-weight: lighter;
 }
 
-html { 
-  background: url(https://s3.amazonaws.com/uploads.hipchat.com/103327/1187384/oih7FJ7Jk3M5KEN/grocery80.jpg) no-repeat center center fixed; 
+html {
+  background: url(https://s3.amazonaws.com/uploads.hipchat.com/103327/1187384/oih7FJ7Jk3M5KEN/grocery80.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,7 +19,10 @@ body{
 
 /*nav*/
 .nav-bar{
-  max-width:
+  max-width: 90%;
+  max-height: 30%;
+  background-color: rgba(119, 110, 105,.85);
+
 }
 .nav-bar ul{
     text-align: center;
