--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,8 @@
   <link rel="stylesheet" type="text/css" href="/css/home.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+
   <script src="/js/app.js"></script>
 </head>
 <body>
