Angas' resolve to body text

--- a/views/products.erb
+++ b/views/products.erb
@@ -22,8 +22,10 @@
       <% end %>
     </div>
   <% end %>
+  <div="colText">
+</ul>
    <p class="column_right main_text">Our Bodega carries a variety of groceries, prepared food from the deli and specialty products. We stock our Bodega daily with an ultimate selection of fresh produce, cold cuts and cheese, groceries, as well as hundreds of other fantastic specialty food items.</p>
-  </ul>
+</div>
 
 
 </div>
