--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,5 +1,5 @@
 <div class="wrapper container">
-<h2>Want to Reach Out?</h2>
+<h2 id="some-rock-salt">Want to Reach Out?</h2>
 
 
 <p>We would love to hear from you! If there's something you'd like to see in our store, hit Submit! Questions or comments? Send those along too!</p>
