--- a/views/home.erb
+++ b/views/home.erb
@@ -8,7 +8,7 @@
   <h2 id="name">
     The Bodega
   </h2>
-  <div class="column1">
+  <!-- <div class="column1">
     <img src="">
   </div>
   <div class="column2">
@@ -16,7 +16,7 @@
   </div>
   <div class="column3">
     <img src="">
-  </div>
+  </div> -->
 
 
 </body>
