--- a/views/about.erb
+++ b/views/about.erb
@@ -1,9 +1,9 @@
 <div class="wrapper">
 
   <div class="container">
-    <h2>An Extraordinary Specialty Food Market</h2>
-    
-   
+    <h2 id="some-rock-salt">An Extraordinary Specialty Food Market</h2>
+
+
 
 
     <p class="about_text">Our goal is to work with the needs of our community and we are dedicated to bringing you convenience. Our Bodega carries a variety of groceries, prepared food from the deli and specialty products. We stock our Bodega daily with an ultimate selection of fresh produce, cold cuts and cheese, groceries, as well as hundreds of other fantastic specialty food items.
