changed margin for nav

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,7 +6,7 @@
 
       <br>
 
-<img id="chef" src="/chef.png">
+<img id="chef" src="/images/chef.png">
 
 <form method = "POST" action ="/send_mail">
 	<label for = "email">Your Email: </label>
