--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 
 
 html { 
-  background: url(https://s3.amazonaws.com/uploads.hipchat.com/103327/1187384/gfopnL6cPhXWMyD/grocery-73.jpg) no-repeat center center fixed;
+  background: url(/images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -20,8 +20,9 @@ body{
 
 /*nav*/
 .nav-bar{
-  max-width: 90%;
+  max-width: 60%;
   max-height: 30%;
+  margin: auto;
   background-color: rgba(119, 110, 105,.85);
 
 }
