--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,7 +16,21 @@ body{
   font-weight: 500;
   color: white;
   font-family: 'Rock Salt';
-  font-size: 44px;
+  font-size: 75px;
   text-decoration: bold;
   color: #000;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+/*  border-top: solid white 1px;
+  border-bottom: solid white 1px;*/
+}
+
+hr{
+  border: 0;
+  height: 5px;
+  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.85), rgba(0,0,0,0));
+  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 }
