--- a/views/about.erb
+++ b/views/about.erb
@@ -13,7 +13,7 @@
 
       <div class="column">
 
-        <img src="brian.jpg" alt="owner" class="img">
+        <img src="/images/brian.jpg" alt="owner" class="img">
         <h3>The Owner</h3>
         <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.</p>
 
