--- a/public/css/products.css
+++ b/public/css/products.css
@@ -24,6 +24,7 @@ li {
 
 .image {
   width: 40%;
+  border-radius: 4px;
 }
 
 .product {
@@ -50,8 +51,10 @@ li {
 
 .main_text {
   color: #fff;
-  width: 40%;
+  width: 50%;
   float: left;
+  margin-left: 70px;
+  font-size: 18px;
 }
 
 .side_nav {
