--- a/views/about.erb
+++ b/views/about.erb
@@ -1,41 +1,40 @@
 <div class="wrapper">
 
-  <div class="container">
-    <h2 id="some-rock-salt">An Extraordinary Specialty Food Market</h2>
+  <h2 id="some-rock-salt">An Extraordinary Bodega</h2>
 
-    <p class="about_text">Our goal is to work with the needs of our community - we are dedicated to bringing you convenience! Our Bodega carries a variety of groceries, prepared food from the deli and specialty products. We stock our Bodega daily with an ultimate selection of fresh produce, cold cuts and cheese, groceries, as well as hundreds of other fantastic specialty food items.
-    </p>
+  <p class="about_text">Our goal is to work with the needs of our community - we are dedicated to bringing you convenience! Our Bodega carries a variety of groceries, prepared food from the deli and specialty products. We stock our Bodega daily with an ultimate selection of fresh produce, cold cuts and cheese, groceries, as well as hundreds of other fantastic specialty food items.
+  </p>
 
-    <div class="staff">
+  <div class="staff">
 
-      <h3 class="about">About Us:</h3>
+    <h3 class="about">About Us:</h3>
 
-      <div class="column">
+    <div class="column">
 
-        <img src="/images/angas.jpg" alt="angas" class="img">
-        <h3 class="about">The Owner</h3>
-        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.</p>
+      <img src="/images/angas.jpg" alt="angas" class="img">
+      <h3 class="about">The Owner</h3>
+      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale.</p>
 
-        <br>
+      <br>
 
-        <img src="/images/eric.png" alt="eric" class="img">
-        <h3 class="about">At the Deli Counter</h3>
-        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
-      </div>
+      <img src="/images/eric.png" alt="eric" class="img">
+      <h3 class="about">At the Deli Counter</h3>
+      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea.</p>
+    </div>
 
-      <div class="column">
+    <div class="column">
 
-        <img src="/images/anh.png" alt="anh" class="img">
-        <h3 class="about">The Cashier</h3>
-        <p>Ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Cabbage asparagus winter.</p>
+      <img src="/images/anh.png" alt="anh" class="img">
+      <h3 class="about">The Cashier</h3>
+      <p>Ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Cabbage asparagus winter.</p>
 
-        <br>
+      <br>
 
-        <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
-        <h3 class="about">The Bodega Cat</h3>
-        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water.</p>
-      </div>
+      <img src="http://media.tumblr.com/7896d869ec59106759b686e144400c2c/tumblr_inline_n2wipdBGeZ1rtlbho.jpg" alt="cat" class="img">
+      <h3 class="about">The Bodega Cat</h3>
+      <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water.</p>
     </div>
   </div>
+
 
 </div>
