--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,6 @@ body{
   padding-bottom: 70px;
 }
 
-
 /*nav*/
 .nav-bar{
   max-width: 60%;
@@ -26,6 +25,7 @@ body{
   border-radius: 4px;
 
 }
+
 .nav-bar ul{
     text-align: center;
     background-color: #eaeaea  ;
@@ -37,6 +37,7 @@ body{
   font-size: 25px;
   font-weight: bold;
 }
+
 .nav-bar ul li{
   list-style: none;
   display: inline-block;
@@ -48,6 +49,7 @@ body{
   list-style: none;
   display: inline;
 }
+
 .social-media li a img{
   height: 50%;
 }
@@ -63,8 +65,6 @@ footer {
   bottom: 0;
   left: 0;
 }
-
-
 
 /*hours*/
 .hours{
@@ -115,6 +115,7 @@ footer {
   font-size: 16px;
   text-align: center;
 }
+
 .contact a:visited{
     text-decoration: none;
     color: #fff;
@@ -129,7 +130,19 @@ footer {
   padding-top: 5px;
 }
 
+/*shared css*/
+#some-rock-salt{
+  font-family: 'Rock Salt';
+}
 
+.wrapper {
+  color: white;
+  background-color: rgba(00,00,00,.75);
+  border-radius: 4px;
+  overflow: auto;
+  width: 80%;
+  margin: 0 auto;
+}
 
 
 
