--- a/public/css/products.css
+++ b/public/css/products.css
@@ -36,6 +36,7 @@ li {
 
 .product_name {
   font-weight: bold;
+  font-size: 18px;
 }
 
 .column_left {
@@ -61,6 +62,3 @@ li {
 float:left;
 }
 
-.colText {
-float:left;
-}
