--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,8 +1,8 @@
-<div class="wrapper container">
+<div class="wrapper">
 <h2 id="some-rock-salt">Want to Reach Out?</h2>
 
 
-<p>We would love to hear from you! If there's something you'd like to see in our store, hit Submit! Questions or comments? Send those along too!</p>
+<p class="p_text">We would love to hear from you! If there's something you'd like to see in our store, hit Submit! Questions or comments? Send those along too!</p>
 
       <br>
 
